--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
 
+/[Aa]ssets/InAndOutARModule.meta
 
 
 # Uncomment this line if you wish to ignore the asset store tools plugin
